# dane-video-segmentation-worker

./: .dockerignore  .flake8  .gitignore  AudioExtractorUtil.py  CODEOWNERS  Dockerfile  Dockerfile.hecate  Dockerfile.poetry  Dockerfile.scenedetect  Dockerfile_with_hecate  README.md  base_util.py  config.yml  docker-compose.yml  docker-entrypoint.sh  hecate.py  hecate_util.py  io_util.py  keyframe_extraction.py  keyframe_util.py  main_data_processor.py  media_file_util.py  models.py  output_util.py  provenance.py  pyproject.toml  requirements.txt  requirements_dev.txt  scenedetect.py  scenedetect_util.py  spectogram.py  spectogram_util.py  spectrogram.py  visxp_prep.py  work_it_locally.py  worker.py
.github/workflows/: _build-push-cached-ecr.yml  _build-push-cached-ghcr.yml  _cached-build-and-push.yml  _deploy.yml  _test.yml  main-branch.yml  manual-deploy.yml  not-main-branch.yml
config/: config.yml
data/: README.md
scripts/: local-rebuild.sh  pre-commit-build.sh
src/: Pipfile
src/util/: FfMpegUtil.py
tests/data/ZQWO_DYnq5Q_000000_example_output/: 0.npz  1.npz  2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz
tests/data/scenedetect/metadata/: keyframes_metadata.csv
tests/data/spectograms/: README.md
tests/unit/: hecate_test.py  hecate_util_test.py  spectogram_test.py  spectogram_util_test.py  spectrogram_test.py  test_scenedetect_util.py  visxp_prep_test.py
