[tool.poetry]
name = "dane-video-segmentation-worker"
version = "0.1.0"
description = "DANE worker providing input for VisXP feature extraction"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yacs = "^0.1.8"
pika = "^1.3.2"
requests = "^2.31.0"
validators = "^0.22.0"
dane = "^0.4.3"
scenedetect = { git = "https://github.com/Veldhoen/PySceneDetect" , tag = "v0.6.4-alpha", extras = ["opencv"]}


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^24.3.0"
flake8 = "^6.1.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | .venv
  )/
)
'''

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'mockito',
  'pika',
  'pika.exceptions',
  'yaml',
  'yacs.*',
  'numpy',
  'validators',
]
ignore_missing_imports = true
